# mmcli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  main.rs
src/client/: api.rs  auth.rs  downloads.rs  mod.rs  subscriptions.rs
src/config/: mod.rs  paths.rs
src/models/: api.rs  auth.rs  mod.rs  product.rs
src/naming/: abbreviations.rs  analyzer.rs  converters.rs  detectors.rs  generator.rs  mod.rs
src/naming/templates/: bearings.rs  cable_holders.rs  latches.rs  mod.rs  nuts.rs  pins.rs  pulleys.rs  screws.rs  spacers.rs  standoffs.rs  washers.rs
src/utils/: error.rs  mod.rs  output.rs
