[package]
name = "mmcli"
version = "0.1.0"
edition = "2021"
description = "McMaster-Carr CLI for API access"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
native-tls = "0.2"
urlencoding = "2.1"
